--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #800000; /* Maroon color */
-    color: #333;
+    color: #fff; /* White text color */
     margin: 0;
     padding: 0;
 }
@@ -55,4 +55,11 @@ nav a:hover {
     width: 60px;
     height: 60px;
     margin-bottom: -10px;
+}
+
+footer {
+    background-color: #000; /* Black color */
+    color: #fff; /* White text color */
+    text-align: center;
+    padding: 10px 0;
 }
