--- a/styles2.css
+++ b/styles2.css
@@ -48,16 +48,11 @@ body {
     padding: 20px;
 }
 
-.footer {
-    background-color: black;
-    color: white;
+footer {
+    background-color: #000; /* Black color */
+    color: #fff; /* White text color */
     text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    padding: 10px 0;
 }
 
 .social-button {
