--- a/styles2.css
+++ b/styles2.css
@@ -62,7 +62,8 @@ footer {
 }
 
 .social-button img {
-    width: 24px;
-    height: 24px;
+   width: 60px;
+    height: 60px;
+    margin-bottom: -10px;
 }
 
