--- a/styles2.css
+++ b/styles2.css
@@ -56,9 +56,14 @@ footer {
 }
 
 .social-button {
-    margin: 0 10px;
-    text-decoration: none;
+   display: inline-block;
+    padding: 10px 20px;
+    margin: 10px;
+    border: none;
+    border-radius: 5px;
     color: #fff;
+    text-decoration: none;
+    transition: all 0.3s ease;
 }
 
 .social-button img {
