--- a/styles2.css
+++ b/styles2.css
@@ -13,6 +13,23 @@ body {
     text-align: center;
 }
 
+nav {
+    background-color: #333;
+    text-align: center;
+    padding: 10px 0;
+}
+
+nav a {
+    margin: 0 20px;
+    color: #F08080;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+
+nav a:hover {
+    color: #fff;
+}
+
 .button-container {
     display: flex;
     justify-content: center;
