--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-family: 'Arial', sans-serif;
-    background-color: #800000; /* Maroon color */
-    color: #fff; /* White text color */
     margin: 0;
     padding: 0;
 }
@@ -9,8 +11,6 @@ body {
 header, .header {
     display: flex;
     align-items: center;
-    background-color: #333;
-    color: #F08080;
     padding: 20px 0;
     text-align: center;
 }
