--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-family: 'Arial', sans-serif;
+    font-family: var(--theme-font-family-base);
+    background-color: var(--color-primary-500); /* Maroon color */
+    color: var(--theme-font-color-dark); /* White text color */
     margin: 0;
     padding: 0;
 }
@@ -11,29 +13,27 @@ body {
 header, .header {
     display: flex;
     align-items: center;
+    background-color: var(--color-secondary-700);
+    color: var(--color-secondary-100);
     padding: 20px 0;
     text-align: center;
 }
 
-.header h1 {
-    margin-right: auto;
-}
-
 nav {
-    background-color: #333;
+    background-color: var(--color-secondary-700);
     text-align: center;
     padding: 10px 0;
 }
 
 nav a, .button, .social-button {
     margin: 0 20px;
-    color: #F08080;
+    color: var(--color-secondary-100);
     text-decoration: none;
     transition: all 0.3s ease;
 }
 
 nav a:hover, .button:hover, .social-button:hover {
-    color: #fff;
+    color: var(--color-secondary-50);
 }
 
 .container {
@@ -48,14 +48,14 @@ nav a:hover, .button:hover, .social-button:hover {
     padding: 10px 20px;
     margin: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: var(--theme-rounded-base);
     text-decoration: none;
     transition: all 0.3s ease;
 }
 
 .button:hover, .social-button:hover {
-    background-color: #fff;
-    color: #800000; /* Maroon color */
+    background-color: var(--color-secondary-50);
+    color: var(--color-primary-500); /* Maroon color */
 }
 
 .button img, .social-button img {
@@ -74,10 +74,10 @@ nav a:hover, .button:hover, .social-button:hover {
     display: block;
     margin: 10px;
     padding: 20px;
-    border: 2px solid #333;
-    border-radius: 10px;
+    border: 2px solid var(--color-secondary-700);
+    border-radius: var(--theme-rounded-container);
     text-decoration: none;
-    color: #333;
+    color: var(--color-secondary-700);
     text-align: center;
     transition: all 0.3s ease;
 }
@@ -85,17 +85,17 @@ nav a:hover, .button:hover, .social-button:hover {
 .game-button img {
     width: 100%;
     height: auto;
-    border-radius: 10px;
+    border-radius: var(--theme-rounded-container);
 }
 
 .game-button:hover {
-    background-color: #333;
-    color: #fff;
+    background-color: var(--color-secondary-700);
+    color: var(--color-secondary-100);
 }
 
 footer {
-    background-color: #000; /* Black color */
-    color: #fff; /* White text color */
+    background-color: var(--color-secondary-900); /* Black color */
+    color: var(--color-secondary-100); /* White text color */
     text-align: center;
     padding: 10px 0;
 }
