--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-family: 'Arial', sans-serif;
     background-color: #800000; /* Maroon color */
     color: #fff; /* White text color */
@@ -7,9 +11,12 @@ body {
 }
 
 header, .header {
-    background-color: #333;
+    display: flex;
+    align-items: center;
+    background-color: #black;
     color: #F08080;
     padding: 20px 0;
+    margin-bottom: 20px;
     text-align: center;
 }
 
