--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,9 @@ body {
     align-items: center;
     justify-content: center;
     font-family: 'Arial', sans-serif;
-    background-color: #800000; /* Maroon color */
-    color: #fff; /* White text color */
-    margin: 0;
-    padding: 0;
+    background-color: #800000;
+    color: #fff;
+    height: 100vh;
 }
 
 .header, header {
