--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     background-color: #800000;
     color: #fff;
     height: 100vh;
+    margin: 0;
 }
 
 .header, header {
@@ -28,14 +29,14 @@ nav {
     width: 100%;
 }
 
-nav a, .button, .social-button {
+nav a, .button, .social-button, .game-button {
     margin: 0 20px;
     color: #F08080;
     text-decoration: none;
     transition: all 0.3s ease;
 }
 
-nav a:hover, .button:hover, .social-button:hover {
+nav a:hover, .button:hover, .social-button:hover, .game-button:hover {
     color: #fff;
 }
 
@@ -63,6 +64,12 @@ nav a:hover, .button:hover, .social-button:hover {
     margin-bottom: -10px;
 }
 
+.game-button img {
+    width: 80px; /* Adjust image size as needed */
+    height: 80px; /* Adjust image size as needed */
+    margin-bottom: 10px;
+}
+
 .button:hover, .social-button:hover, .game-button:hover {
     background-color: #fff;
     color: #800000; /* Maroon color */
@@ -81,17 +88,6 @@ nav a:hover, .button:hover, .social-button:hover {
     color: #fff;
     width: 100%;
     height: 100%;
-}
-
-.game-button img {
-    width: 80px; /* Adjust image size as needed */
-    height: 80px; /* Adjust image size as needed */
-    margin-bottom: 10px;
-}
-
-.game-button:hover {
-    background-color: #fff;
-    color: #800000; /* Maroon color */
 }
 
 .footer {
