--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #000;
+    background-color: #333;
     color: #F08080;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 20px 0;
     text-align: center;
-    width: 100%;
 }
 
 nav {
