--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
 }
 
-header {
+header, .header {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,6 +20,7 @@ header {
     text-align: center;
     width: 100%;
 }
+
 
 nav {
     background-color: #333;
