--- a/styles.css
+++ b/styles.css
@@ -77,21 +77,17 @@ body {
 }
 
 .social-button {
-    display: inline-block;
-    margin: 0 20px;
-    color: #F08080;
-    text-decoration: none;
-    transition: all 0.3s ease;
-}
-
-.social-button img {
-    width: 60px;
-    height: 60px;
-    margin-bottom: -10px;
+    margin: 0 10px;
+    transition: transform 0.3s ease-in-out;
 }
 
 .social-button:hover {
-    color: #fff;
+    transform: scale(1.2);
+
+.social-button img {
+    width: 40px;
+    height: 40px;
+    margin-bottom: -10px;
 }
 
 .calendar-container {
