--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 150px; 
+    height: 150px;
     margin: 10px;
-    padding: 10px 15px;
     border: 2px solid #333;
     border-radius: 10px;
     text-decoration: none;
