--- a/styles.css
+++ b/styles.css
@@ -60,9 +60,9 @@ body {
 }
 
 .game-button img {
-    width: 70px; 
-    height: 70px; 
-    border-radius: 50%; 
+    width: 50px;
+    height: auto;
+    border-radius: 10px;
 }
 
 .container {
