--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,30 @@ iframe {
     border: none;
 }
 
+ .slope-container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .slope-embed-container {
+            position: relative;
+            padding-bottom: 60%;
+            height: 0;
+            overflow: hidden;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        .slope-embed-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
 .footer {
     background-color: #000;
     color: #fff;
