--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ body {
     align-items: center;
 }
 
+.headergif img {
+    width: 100%
+    height: 150
+
 .button-container {
     display: flex;
     flex-wrap: wrap;
