--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
     align-items: center;
 }
 
-
 .button-container {
     display: flex;
     flex-wrap: wrap;
@@ -38,7 +37,37 @@ body {
     color: #fff;
     transform: scale(1.1);
 }
-.social-button img, .tbd-button img{
+
+/* Add the new styles for the GIF container and overlay buttons */
+.gif-container {
+    position: relative;
+    display: inline-block;
+}
+
+.gif-container img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.tbd-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #0074D9;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.tbd-button:hover {
+    background-color: #0056b3;
+}
+
+.social-button img, .tbd-button img {
     width: 30px;
     height: 30px;
     margin-bottom: -10px;
@@ -82,29 +111,29 @@ iframe {
     border: none;
 }
 
- .slope-container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-        }
+.slope-container {
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+}
 
-        .slope-embed-container {
-            position: relative;
-            padding-bottom: 60%;
-            height: 0;
-            overflow: hidden;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
+.slope-embed-container {
+    position: relative;
+    padding-bottom: 60%;
+    height: 0;
+    overflow: hidden;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
-        .slope-embed-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
+.slope-embed-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .footer {
     background-color: #000;
