--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-/* Reset some default styles */
-body, h1, p {
+  font-family: Arial, sans-serif;
+    background-color: #800000;
+    color: #fff;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
-/* Style the header */
-header {
+.header {
     background-color: #333;
     color: #F08080;
     padding: 20px 0;
@@ -20,9 +21,8 @@ header {
     justify-content: center;
 }
 
-/* Style the overlay buttons with the "tbd-button" class */
-.tbd-button {
-    margin: 10px;
+.tbd-button, .social-button {
+    margin: 0 15px;
     padding: 10px 20px;
     border: 2px solid #333;
     border-radius: 10px;
@@ -31,25 +31,12 @@ header {
     transition: background-color 0.3s ease, transform 0.3s ease-in-out;
 }
 
-.tbd-button:hover {
-    background-color: #0074D9;
-    color: white;
+.tbd-button:hover, .game-button:hover, .social-button:hover {
+    background-color: #333;
+    color: #fff;
     transform: scale(1.1);
 }
-
-/* Add the new styles for the GIF container and overlay buttons */
-.gif-container {
-    position: relative;
-    display: inline-block;
-}
-
-.gif-container img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-.social-button img, .tbd-button img {
+.social-button img, .tbd-button img{
     width: 30px;
     height: 30px;
     margin-bottom: -10px;
@@ -93,29 +80,29 @@ iframe {
     border: none;
 }
 
-.slope-container {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-}
+ .slope-container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
 
-.slope-embed-container {
-    position: relative;
-    padding-bottom: 60%;
-    height: 0;
-    overflow: hidden;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
+        .slope-embed-container {
+            position: relative;
+            padding-bottom: 60%;
+            height: 0;
+            overflow: hidden;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
 
-.slope-embed-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+        .slope-embed-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
 
 .footer {
     background-color: #000;
