--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ body {
     text-align: center;
 }
 
+#myHeader {
+    background-image: url('https://media.giphy.com/media/GbwWtqaEP6rTq9e2mM/giphy.gif');
+    background-size: cover;
+    height: 300px;
+
 .header {
     background-color: #333;
     color: #F08080;
